--- a/css/estilo.css
+++ b/css/estilo.css
@@ -256,7 +256,7 @@ section.npage{
     display: flex;
     justify-content: center;
     align-items: center;
-    height:calc(100vh - 105px);    
+    height:100vh;    
 }
 .vcpage .numero{
     font-family: 'GothamBlack';
@@ -684,6 +684,216 @@ section.brn{
     margin: 0 auto;
     text-align: center;
 }
+/*Arrendatario*/
+.citi-bg{    
+    position: relative;
+    display: block;
+    width: 100%;
+    margin-top: 2em;
+}
+.citi-bg img.bg-city{
+    display: block;
+    position: absolute;
+    top: 51px;
+    left: 0;
+    z-index: 0;
+    height: 498px;
+}
+.consulta {
+    position: relative;
+    background: #ffffff;
+    box-shadow: 1px 1px 2px #B0B6BA;
+    border: 1px solid #b0b6bab9;
+    border-radius: 15px;
+    padding: 2.7em 6em;
+    z-index: 1;
+    min-height: 560px;
+    margin-top: -10px;
+}
+.consulta h3{
+    position: relative;
+    margin-top: 0.5em;
+}
+.consulta h3::after{
+    content: '';
+    position: absolute;
+    width: 45px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;
+    top: 100%;
+}
+.consulta p{
+    margin-bottom: 3em;
+}
+.consulta .dropdown{
+    margin: 0em 0 2em;
+    display: block;
+}
+.consulta .dropdown small{
+    font-family:'RobotoRegular';
+    display: none;
+    margin-left: 2em;
+    color: #BD0F14;
+    font-size: 0.75rem;
+}
+label.error{
+    color: #BD0F14;
+}
+.consulta .dropdown-toggle{
+    font-family:'RobotoRegular';
+    background:#ffffff ;
+    border:1px solid #b0b6ba;
+    height: 50px;
+    width: 100%;
+    text-align: left;
+    padding: 0.375rem 0.75rem;
+    position: relative;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23B0B6BA'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform .2s ease-in-out;
+    background-position: 95% center;
+    border-radius: 0.25rem;
+}
+.consulta .dropdown-toggle.error{
+    border: 1px solid #BD0F14;
+}
+.consulta input.font-gray{
+    color: #B0B6BA;
+}
+.consulta .dropdown-menu {
+    font-family: 'RobotoRegular';
+    width: 95%;
+    left: 2.5% !important;
+    top: -1em !important;
+    background: #f8f8f8;
+    border-radius: 10px;
+}
+.consulta .dropdown-item{
+    font-family: 'RobotoRegular';
+    color: #253150;
+    font-size: 0.875rem;
+}
+.consulta label {
+    font-family: 'RobotoBold';
+    font-size: 1rem;
+}
+.consulta input {
+    font-family: 'RobotoRegular';
+    height: 50px;
+    border: 1px solid #b0b6ba;
+}
+.consulta button[type=submit],.consulta button[type=reset] {
+    font-family: 'GothamBold';
+    display: block;
+    margin: 4em auto 1em;
+    background: #b0b6ba21;
+    border: 1px solid #B0B6BA;
+    border-radius: 10px;
+    color: #B0B6BA;
+    padding: 1em 2em;
+}
+.consulta  button[type=submit].underline-red {
+    border: 1px solid #BD0F14;
+    background-color: #bd0f152a;
+    color: #BD0F14;
+    margin-bottom: 0;
+}
+.consulta .resultados{
+    display: none;
+    margin: 2em auto 1em;
+}
+.consulta .resultados p{    
+    font-family: 'RobotoBold';
+    color: #253150;
+    margin-bottom: 1em;
+}
+.consulta .resultados .text-info-res{
+    font-family: 'RobotoRegular';
+    background-color: #f8f8f8;
+    color: #333333;
+    padding: 1em 2em;
+}
+.consulta .canon-label{
+    font-family: 'RobotoRegular';
+    display: none;
+    color: #B0B6BA;
+    font-size: 0.75rem;
+    margin-left: 2em;
+}
+.col-lg-6 .adv-w, .col-lg-6 .adv-w2 {
+    position: relative;
+    z-index: 1;
+}
+.adv-w img {
+    position: absolute;
+    top: 45px;
+    height: auto;
+    max-width: 350px;
+}
+.box-arrendamiento{
+    height: 100%;   
+    position: relative;  
+    padding-bottom: 2em;   
+    max-width: 475px;
+}
+.box-arrendamiento img{
+    width: 100%;
+    height: auto;    
+}
+.box-arrendamiento h2{    
+    margin: 1rem 45px;
+    position: relative;
+    max-width: 325px;
+    font-size: 1.75rem;
+}
+.box-arrendamiento h2::after {
+    content: '';
+    position: absolute;
+    width: 45px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;
+    top: 100%;
+}
+.box-arrendamiento p{
+    font-family: 'RobotoRegular';
+    color: #333333;
+    padding: 0;
+    margin: 1rem 45px;
+}
+.box-arrendamiento ul{
+    font-family: 'RobotoRegular';
+    color: #333333;
+    list-style: none;
+    margin: 1rem 30px;
+    max-width: 385px;
+}
+.box-arrendamiento li{
+    padding: 0 0 1em 0;
+}
+.box-arrendamiento li::before {
+    content: "\2022";
+    color: #BD0F14;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1.3em;
+}
+.box-arrendamiento a{
+    border: 1px solid #BD0F14;
+    background-color:  #bd0f152a;
+    color: #BD0F14;
+    margin-bottom: 0;
+}
+.box-arrendamiento a:hover{
+    background-color: #BD0F14;
+    border: 1px solid #BD0F14;
+    color: #FFFFFF;
+}
 /*Blog*/
 .h-450{
     height: 450px;
@@ -963,17 +1173,25 @@ h2.beneficios::after{
     width: max-content;
 }
 /*preguntas*/
+
 .faq{
     position: relative;
-    margin-top: 3em;
+    margin-top: 5.3em;
+    margin-left: auto;
+    margin-right: auto;    
     border-radius: 2em;
     max-width: 570px;
+    width: 100%;
     z-index: 1;
+    float: left;
 }
 .faq .accordion-flush .accordion-item{
     border: 1px solid #B0B6BA; 
 }
-.faq .accordion,.accordion-flush{
+.faq .accordion{
+    border-radius: 1em;    
+}
+.accordion-flush{
     border-radius: 1em;
 }
 .accordion-flush .accordion-item:last-child {
@@ -1353,7 +1571,7 @@ h2.beneficios::after{
 .form-control:focus {
     color: #253150;
     background-color: #fff;
-    border:1px solid #ced4da;
+    border: 1px solid #b0b6ba;
     outline: 0;
     box-shadow: none;
 }
@@ -1612,6 +1830,10 @@ a#test{
     font-size: 1.25rem;
     margin: 1em auto;
 }
+.in-slide h3{
+    font-size: 1.25rem;
+    margin: 1em auto;
+}
 .more {        
     margin-right: 25px;
     margin-top: -30px;
@@ -1666,7 +1888,11 @@ ul.submenu {
 .submenu li {
     height: 100%;
 }
-.backmenu, .tab-content {
+.backmenu  {
+    position: relative;
+    z-index: 1;
+}
+.tab-content {
     position: relative;
     z-index: 1;
 }
@@ -1715,7 +1941,7 @@ ul.submenu {
     width: 100%;
 }
 .indicador img{
-    margin-right: 1em;
+    margin-right: 0.7em;
 }
 .nproductos{    
     margin: 0 auto;
@@ -1748,10 +1974,10 @@ ul.submenu {
 .submenu-dos button{
     margin-bottom: 1em;
 }
-.submenu-dos.nav-pills .nav-link{
-    color: #253150;
-}
 
+.submenu-dos .nav-link{
+    color: #B0B6BA;
+}
 .submenu-dos .nav-link.active {
     color: #253150;
     background-color: transparent;    
@@ -1780,10 +2006,17 @@ ul.submenu {
     margin-right: 0;
     padding-right: 15px;
 }
+.upper-tab h2{
+    font-size: 1.375rem;
+}
 .upper-tab p{
     margin-top: 2rem;
 }
-
+.upper-tab.nprod{
+    position: relative;
+    z-index: 2;
+    margin-top: 100px;
+}
 .low-tab {
     margin-top: 120px;
     max-width: 1170px;
@@ -1852,11 +2085,15 @@ ul.submenu {
 .low-tab .judiciales .mini-slide .block-slide {    
     height: 400px;
 }
+.nprod .low-tab{
+    margin-top: 100px;
+}
 #v-pills-tab button{
     font-family:'RobotoBold'; 
     text-align: left; 
 }
 .inner-tab-content{
+    display: flex;
     margin-top: 1em;
 }
 .tabs-servicios{
@@ -1872,6 +2109,10 @@ ul.submenu {
     margin: 1em auto;
     display: block;
 }
+.tabs-servicios .mini-banner img{
+    width: 100%;
+    height: auto;
+}
 .tabs-servicios p{
     width: 100%;
     max-width: 700px;
@@ -1882,18 +2123,46 @@ ul.submenu {
     margin: 0 auto;
     width: 100%;
 }
-.tabs-nservicios ul{
+.tabs-nservicios ul,
+.tabs-nproductos ul{
     font-family:'RobotoRegular';
     list-style: none;
     color: #253150;
 }
-.tabs-nservicios ul li::before {
+.tabs-nservicios ul li::before{
     content: "\2022";
     color: #BD0F14; 
     font-weight: bold; 
     display: inline-block; 
     width: 1em; 
     margin-left: -1em; 
+}
+ul.prod-list  >  li::before {
+    content: "\2022";
+    color: #BD0F14; 
+    font-weight: bold; 
+    display: inline-block; 
+    width: 1em; 
+    margin-left: -1.2em; 
+}
+.prod-list{
+    max-width: 640px;
+    width: 100%;
+    margin: 4em auto 2em;
+}
+.prod-list li{
+    padding-bottom: 1em;
+    color: #333333;
+}
+.sub-list{
+    margin-top: 1em;
+}
+.sub-list li{
+    padding-bottom: 0;
+}
+.sub-list li::before{
+    content: "-";
+    margin-right: 1em;
 }
 .aula-cajon{
     width: 100%;
@@ -2357,6 +2626,9 @@ footer .lineav{
     outline: 0;
     box-shadow: none;
 }
+.ae-hide{
+    display:flex;
+}
 /*Media Query*/
 @media (max-width: 1600px){
     .banner{
@@ -2388,6 +2660,9 @@ footer .lineav{
     .bluebox.home {
         top: 35%;
         left: 4%;
+    }
+    .low-tab .colum-sec-p{
+        padding: 1rem;
     }
 }
 @media (max-width: 1199.98px) {
@@ -2453,6 +2728,16 @@ footer .lineav{
     .faq .accordion-body{
         height: auto;
     }
+    .backmenu .nav-pills .nav-link,.backmenu .nav-pills .nav-link.active{        
+        font-size: 0.8em;        
+    }  
+    .upper-tab img {
+        width: 100%;
+        height: auto;
+    } 
+    .upper-tab.nprod {        
+        margin-top: 70px;
+    } 
 }
 
 @media screen and (min-width:992px) and (max-width:1090px) {
@@ -2958,6 +3243,123 @@ footer .lineav{
         color: #253150;
         padding-bottom: 2rem;
     }
+    .upper-tab img {
+        width: 100%;
+        height: auto;
+        max-width: 70%;
+        margin: 0 auto;
+    }
+    .backgro{
+        height: 630px;
+    }
+    .upper-tab .colum-sec-p{
+        max-width: 487px;
+        margin: 1em auto;
+        width: 100%;
+    }
+    .low-tab .tab-container{
+        max-width: 487px;
+        margin: 1em auto;
+        width: 100%;
+    }
+    .backmenu {        
+        z-index: 2;
+    }
+    .backmenu .nav-submenu{
+        display: none;
+    }
+    .backmenu .submenu {
+        align-items: center;
+        flex-wrap: nowrap;
+        width: 90%;
+        box-shadow: none;
+        background-color: #F8F8F8;        
+        margin: 0 auto;
+        color: #253150;
+    }    
+    .backmenu .nav-submenu:active{
+        background-color: #253150;
+    }    
+    .backmenu .nav-pills .nav-link.active {
+        font-size: 1em;
+        width: 100%;
+        margin: 0 auto;
+        background-color: #f8f8f8;
+        position: relative;
+        z-index: 2;
+        color: #253150;
+        padding: 0;
+    }
+    .backmenu .nav-pills .nav-link:hover.active {
+        color: #ffffff;   
+        background-color: #253150;     
+    }    
+    .backmenu .nav-pills .nav-link {
+        font-size: 1em;        
+        margin: 0 auto;
+        background-color: #f8f8f8;
+        position: relative;
+        z-index: 2;  
+        color: #253150; 
+        width: 95%;   
+        border-bottom: 1px solid rgba(0, 0, 0, 0.125);     
+        border-radius: 0;
+    }
+    .backmenu .nav-pills .inferior{        
+        margin: 0 auto;
+        background-color: #f8f8f8;
+        position: relative;
+        z-index: 2;
+        width: 65%;
+        font-size: 	0.875rem;
+    }
+    .ae-dropdown{
+        max-width: 1170px;
+        width: 70%;
+        margin: 0 auto;
+        display: block;
+        padding: 1rem;
+        background-color: #ffffff;
+        box-shadow: 2px 2px 5px #999;
+        background-image: url(../img/icon_flecha-inactivo.svg);
+        background-repeat: no-repeat;
+        background-position:90% center ;
+        background-size: 20px;
+    }
+    .ae-dropdown span{
+        font-family: 'GothamBold';
+        font-size: 	0.875rem;
+        color: #253150;
+        margin-left: 1em;
+    }
+    .ae-hide{
+        display:none;
+    }
+    .low-tab {
+        margin-top: 160px;        
+    }
+    .inner-tab-content{
+        display: block;
+    }
+    .inner-tab-content .nav-pills{
+        margin-bottom: 1em;
+    }
+    #v-pills-tab button,
+    #v-pills-home-tab button{        
+        text-align: center;
+        margin: 0 auto;
+    }
+    .box-arrendamiento{
+        margin: 1rem auto;        
+    }
+    .consulta{
+        max-width: 475px;
+        margin: auto;
+    }
+    .faq{
+        float: none;
+        margin-top: 3em;
+    }
 }
 
 
@@ -2985,6 +3387,10 @@ footer .lineav{
     .nproductos h2{
         max-width: 340px;
         margin: auto;
+    }
+    .intermediarios.nproductos h2{
+        max-width: 375px;
+        text-align: left;
     }
     .intermediarios .blog-card{
         max-width: 372px;
@@ -3161,6 +3567,31 @@ footer .lineav{
     }
     .vcpage .info-msj {
         font-size: 29px;
+    }
+    .low-tab .container{
+        max-width: 100%;
+        padding: 0;
+    }
+    .low-tab .tab-container {
+        max-width: 100%;
+    }
+    .low-tab .tab-container h3{
+        max-width: 487px;
+        margin: 0 auto;
+    }
+    .tabs-nservicios ul, .tabs-nproductos ul {
+        max-width: 487px;
+        margin:1.5em auto;
+    }
+    .banner-sec {
+        padding: 2rem 0rem 0 0rem;
+        width: 100%;
+    }
+    .backgro {        
+        top: 0px;
+    }
+    .upper-tab.nprod {
+        margin-top: 0;
     }
 }
 
@@ -3355,12 +3786,12 @@ footer .lineav{
         margin-top: 50px;
         margin-bottom: 80px;
     }
-    .search-box{
-        width: 90%;        
+    .search-box{                
         margin:auto;
     }
     .search-box.filtro {
         height: 275px;
+        margin-bottom: 2em;
     }
     .search-box h3.left {
         font-size: 1.25rem;
@@ -3401,13 +3832,17 @@ footer .lineav{
         width: 100%;
     }    
     .faq {
-        max-width: 90%;
+        max-width: 100%;
         margin-left: auto;
         margin-right: auto;
     }
     .faq .accordion-button {
         height: auto;
         padding: 0 1em;
+    }
+    .faq .accordion {
+        border-radius: 1em;
+        margin: 0;
     }
     .fecha {                
         width: 60%;        
@@ -3435,8 +3870,12 @@ footer .lineav{
     .especial-img {
         max-width: 375px;        
     }
+    .slider-servicios .col-aux,
+    .slider-servicios .slide {
+        max-width: 320px;
+    }
     .slider-servicios .in-slide {
-        margin: 0 auto;
+        margin: 0 120px;
     }
     .in-slide {
         margin: 0 20px;
@@ -3445,6 +3884,39 @@ footer .lineav{
         width: 100%;
         max-width: 375px;
         margin: auto;
+    }
+    .upper-tab img {
+        max-width: 100%;        
+    }
+    .upper-tab .colum-sec-p h3{
+        text-align: center;
+        font-size: 1.25rem;
+    }
+    .low-tab {
+        margin-top: 70px;
+    }
+    .low-tab .tab-container h3 {
+        max-width: 375px;
+        margin: auto;
+    }
+    .low-tab .container {
+        max-width: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+    .tabs-nservicios ul, .tabs-nproductos ul {
+        max-width: 375px;        
+    }
+    .banner-sec {
+        padding: 1rem 0rem 0 0rem;        
+    }
+    .consulta {
+        padding: 30px 1em;
+    }
+    .box-arrendamiento h2,
+    .box-arrendamiento p,
+    .box-arrendamiento ul {
+        margin: 1rem 1rem;        
     }
 }
 
@@ -3464,6 +3936,9 @@ footer .lineav{
     }
     .faq .accordion-body {
         margin: 0em 1.8em 0em;
+    }
+    footer h2 {
+        width: 100%;
     }
 }
 @media (max-width: 420px) {
@@ -3502,6 +3977,11 @@ footer .lineav{
     }
     .in-slide {
         margin: 0 20px;
+    }
+    .low-tab .tab-container h3 {
+        max-width: 375px;
+        width: 90%;
+        margin: auto;
     }
 }
 @media (max-width: 375px) {
@@ -3554,7 +4034,18 @@ footer .lineav{
     .in-slide {
         margin: 0 auto;
     }
-    
+    .backgro {
+        height: 680px;
+    }
+    .banner-sec .indicador {
+        font-size: 0.9em;
+    }
+    .indicador img {        
+        width: 0.7em;
+    }
+    .banner-sec .indicador {
+        font-size: 0.8em;
+    }
 }
 @media (max-width: 330px){
     .intermediarios .container.mt-n200 {
@@ -3563,5 +4054,8 @@ footer .lineav{
     .intermediarios .container.mt-n200 h2.white {
         color: #253150;
         padding-bottom: 1rem;
+    }
+    .miga a:first-of-type {
+        margin-left: 0;
     }
 }
